--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
               <p>Superior de tecnologia em análise e desenvolvimento de sistemas</p>
               <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2022 - Dezembro 2023</span></h6>
             </div>
-            <p style="margin-left: 30px;" class="w3-text-grey w3-padding-16">
-              Cursos Complementares</p>
+            <h2 class="w3-text-grey w3-padding-16">
+              <i class="fa fa-pencil fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Cursos Complementares</h2>
             <ul>
               <li>Logica de programação e algoritimos - Udemy</li>
               <li>HTML5 e CSS3 - Udemy</li>
