--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   
     <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <a href="https://github.com/MoisesdeFranca" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/mois%C3%A9s-henrique-developer/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/moises-henrique-developer/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
